color/calibrate: Reset assistant state when calibrating

The calibration state is reset, but the second time the assistant is
run, the tree view signalling isn't hit, meaning the values selected up
front isn't forwarded to the calibration. The assistant page was also
still marked as "completed" even though no state had been set.

What this meant is that even though e.g. the device kind was appearing
to be selected to something, the actual calibration state was still the
default (unknown), which would later hit a soft assert and a error null
pointer dereference.

Fix this by resetting the assistant pages' completeness to incomplete,
and run the same code path for when the tree view options were selected
when an assistant page is prepared.

Closes: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1196
(cherry picked from commit d0a550b27d18d4d0a249a65d4cd4faca8ecb516d)